Update CLI tool helper text.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -1357,27 +1357,44 @@
     "    \n",
     "    description = (\n",
     "        'Search across all library components to find specific functionality.\\n\\n'\n",
-    "        'This command searches through:\\n'\n",
-    "        '- Factory names and documentation\\n'\n",
-    "        '- Example function names and docstrings\\n'\n",
+    "        'SEARCH CAPABILITIES:\\n'\n",
+    "        '- Simple text search with partial word matching (case-insensitive by default)\\n'\n",
+    "        '- Searches factory names, documentation, examples, helpers, and modules\\n'\n",
+    "        '- Use --include-source to also search within code implementations\\n\\n'\n",
+    "        'WHAT IT SEARCHES:\\n'\n",
+    "        '- Factory names and documentation (e.g., \"padding\" finds p, ps, pe factories)\\n'\n",
+    "        '- Example function names, features, and docstrings\\n'\n",
     "        '- Helper function names and docstrings\\n'\n",
     "        '- Module names and documentation\\n'\n",
-    "        '- Optionally: source code of examples and helpers\\n\\n'\n",
-    "        'Use --include-source to search within the actual code implementations.'\n",
+    "        '- Source code of examples/helpers (with --include-source flag)\\n\\n'\n",
+    "        'SEARCH BEHAVIOR:\\n'\n",
+    "        '- Partial matching: \"color\" finds border_color, text_color, shadow_color, etc.\\n'\n",
+    "        '- No regex/wildcards: Patterns like \".*color.*\" or \"col*\" won\\'t work\\n'\n",
+    "        '- No CSS class values: Can\\'t search for \"bg-blue-500\" (values are dynamic)\\n\\n'\n",
+    "        'BEST FOR:\\n'\n",
+    "        '- Finding utility categories (padding, margin, flex, grid, shadow)\\n'\n",
+    "        '- Locating factory names (sr_only, combine_classes, p, m, bg)\\n'\n",
+    "        '- Discovering programming patterns (hover, transition, center)\\n\\n'\n",
+    "        'TIPS FOR CODING ASSISTANTS:\\n'\n",
+    "        '- Use partial words to find related utilities\\n'\n",
+    "        '- Add --include-source to find usage patterns in code\\n'\n",
+    "        '- Use --in to narrow search scope (factories, examples, helpers, modules)\\n'\n",
+    "        '- Results show context and direct commands to view details'\n",
     "    )\n",
     "    \n",
     "    if example_factories:\n",
-    "        description += f'\\n\\nExample searches: {example_factories}, padding, negative, helper'\n",
+    "        description += f'\\n\\nExample searches: {example_factories}, padding, hover, transition, center'\n",
     "    \n",
     "    parser = subparsers.add_parser(\n",
     "        'search', \n",
     "        help='Search across all library components',\n",
-    "        description=description\n",
+    "        description=description,\n",
+    "        formatter_class=argparse.RawDescriptionHelpFormatter  # Add this to preserve formatting\n",
     "    )\n",
     "    parser.add_argument(\n",
     "        'query',\n",
     "        type=str,\n",
-    "        help='Search query'\n",
+    "        help='Search query (supports partial word matching, case-insensitive by default)'\n",
     "    )\n",
     "    parser.add_argument(\n",
     "        '--in',\n",
@@ -1417,23 +1434,34 @@
     "    combine_example = get_combine_classes_example()\n",
     "    \n",
     "    description = (\n",
-    "        'Test code snippets using the library with automatic imports.\\n\\n'\n",
+    "        '⚠️  CRITICAL: Test code snippets using the library with automatic imports.\\n\\n'\n",
+    "        'THIS COMMAND IS MANDATORY BEFORE IMPLEMENTATION:\\n'\n",
+    "        '- ALWAYS validate generated code with this command first\\n'\n",
+    "        '- NEVER skip this step - it prevents errors and saves debugging time\\n'\n",
+    "        '- This ensures correct syntax, proper imports, and expected output\\n\\n'\n",
     "        'This command:\\n'\n",
     "        '- Automatically generates all necessary import statements\\n'\n",
     "        '- Executes your code in a safe environment\\n'\n",
     "        '- Shows output or error messages\\n'\n",
-    "        '- Helps validate your understanding before implementation\\n\\n'\n",
-    "        'Code can be provided directly or loaded from a file.'\n",
+    "        '- Validates your understanding before implementation\\n\\n'\n",
+    "        'Code can be provided directly or loaded from a file.\\n\\n'\n",
+    "        'Code format notes:\\n'\n",
+    "        '- Single-line statements work: \"print(p(4)); print(m(2))\"\\n'\n",
+    "        '- Control flow requires multiline format (no semicolons):\\n'\n",
+    "        '  Use: $\\'for i in [1,2]:\\\\n    print(p(i))\\'\\n'\n",
+    "        '  NOT: \"for i in [1,2]: print(p(i))\"\\n'\n",
+    "        '- F-strings are fully supported'\n",
     "    )\n",
     "    \n",
-    "    epilog = 'Examples:\\n'\n",
+    "    epilog = '⚠️  REMEMBER: Always test code before using it in production!\\n\\n'\n",
+    "    epilog += 'Examples:\\n'\n",
     "    epilog += f'  cjm-tailwind-explore test-code \"{example_code}\"\\n'\n",
     "    epilog += '  cjm-tailwind-explore test-code --file snippet.py\\n'\n",
     "    epilog += f'  cjm-tailwind-explore test-code \"{combine_example}\" --show-imports'\n",
     "    \n",
     "    parser = subparsers.add_parser(\n",
     "        'test-code', \n",
-    "        help='Test code snippets using the library',\n",
+    "        help='⚠️  CRITICAL: Test code snippets using the library (ALWAYS use before implementation)',\n",
     "        description=description,\n",
     "        epilog=epilog,\n",
     "        formatter_class=argparse.RawDescriptionHelpFormatter\n",
@@ -1847,7 +1875,7 @@
     "- Showing usage examples from test functions\n",
     "- Providing source code for helper functions\n",
     "- Searching across all library components\n",
-    "- Testing code snippets with automatic imports\n",
+    "- CRITICALLY: Testing code snippets with automatic imports BEFORE implementation\n",
     "- Generating recommended import statements\n",
     "- Scanning existing code for replaceable CSS patterns\n",
     "\n",
@@ -1860,7 +1888,7 @@
     "  1. List all modules:     cjm-tailwind-explore modules\n",
     "  2. View factories:       cjm-tailwind-explore factories\n",
     "  3. Search for patterns:  cjm-tailwind-explore search <query>\n",
-    "  4. Test code:           cjm-tailwind-explore test-code \"<code>\"\n",
+    "  4. CRITICAL: Test code:  cjm-tailwind-explore test-code \"<code>\"\n",
     "  5. Get imports:         cjm-tailwind-explore imports\n",
     "  6. Scan existing code:  cjm-tailwind-explore scan <file>\n",
     "\n",
@@ -1870,8 +1898,13 @@
     "  - Use 'factory <module> <name>' for detailed factory information\n",
     "  - Use 'examples' to see test-based usage patterns\n",
     "  - Use 'search' to find specific functionality\n",
-    "  - Use 'test-code' to verify your understanding\n",
+    "  - CRITICAL: ALWAYS use 'test-code' to validate code BEFORE implementation\n",
     "  - Use 'scan' to analyze existing code for migration opportunities\n",
+    "\n",
+    "IMPORTANT: Code Validation\n",
+    "  ⚠️  ALWAYS use 'test-code' to verify generated code before using it\n",
+    "  ⚠️  This ensures correct syntax, proper imports, and expected output\n",
+    "  ⚠️  Never skip this step - it prevents errors and saves debugging time\n",
     "\n",
     "Key Concepts:\n",
     "  - Factories: Objects that generate CSS classes (e.g., {example_factories})\n",
@@ -1880,8 +1913,8 @@
     "  - Helpers: Convenience functions for common patterns\n",
     "\n",
     "Tips for Coding Assistants:\n",
+    "  - MANDATORY: Use 'test-code' to validate ALL generated code before implementation\n",
     "  - Use 'search --include-source' to find usage patterns in code\n",
-    "  - Use 'test-code' to validate generated code before using it\n",
     "  - Use 'imports' to get all necessary import statements\n",
     "  - Use 'scan' to identify replaceable hardcoded CSS classes\n",
     "  - Factory names are intuitive: {example_factories}\n",
@@ -1893,7 +1926,7 @@
     "  cjm-tailwind-explore factories -m {first_module}       # Explore {first_module} utilities\n",
     "  cjm-tailwind-explore factory {first_module} {first_factory}          # Learn about {first_factory} factory\n",
     "  cjm-tailwind-explore example {first_module} {example_feature}      # See usage examples\n",
-    "  cjm-tailwind-explore test-code '{example_test_code}'   # Test your understanding\n",
+    "  cjm-tailwind-explore test-code '{example_test_code}'   # CRITICAL: Test your understanding\n",
     "  cjm-tailwind-explore scan app.py                # Analyze existing code\n",
     "\"\"\".strip()\n",
     "    \n",
