--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -233,6 +233,7 @@
     "def test_borders_radius_examples():\n",
     "    \"\"\"Test border radius utilities with all variants.\"\"\"\n",
     "    # Test all corners\n",
+    "    assert str(rounded()) == \"rounded\"\n",
     "    assert str(rounded.xs) == \"rounded-xs\"\n",
     "    assert str(rounded.sm) == \"rounded-sm\"\n",
     "    assert str(rounded.md) == \"rounded-md\"\n",
