--- a/nbs/utilities/effects.ipynb
+++ b/nbs/utilities/effects.ipynb
@@ -142,8 +142,25 @@
    "outputs": [],
    "source": [
     "#|exports\n",
+    "def test_effects_shadow_base_examples():\n",
+    "    \"\"\"Test shadow size utilities.\"\"\"\n",
+    "    assert str(shadow()) == \"shadow\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_effects_shadow_base_examples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed7e4a6d-cdc3-498a-b17d-e450a93d0d62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
     "def test_effects_shadow_size_examples():\n",
     "    \"\"\"Test shadow size utilities.\"\"\"\n",
+    "    assert str(shadow()) == \"shadow\"\n",
     "    # Test all named sizes\n",
     "    assert str(shadow._2xs) == \"shadow-2xs\"\n",
     "    assert str(shadow.xs) == \"shadow-xs\"\n",
