--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -109,93 +109,93 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_utils\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_factory_extraction --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
-    "    cli_search --> cli_factory_extraction\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
+    "    cli_search --> cli_utils\n",
+    "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_example_discovery\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_helper_discovery\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_accessibility\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_effects\n",
     "    core_testing --> core_base\n",
-    "    utilities_accessibility --> core_testing\n",
-    "    utilities_accessibility --> builders_scales\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_accessibility\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_backgrounds --> core_base\n",
+    "    utilities_accessibility --> builders_scales\n",
+    "    utilities_accessibility --> core_testing\n",
     "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> core_base\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_testing\n",
+    "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_borders --> core_base\n",
     "    utilities_borders --> core_testing\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> builders_colors\n",
-    "    utilities_effects --> core_base\n",
     "    utilities_effects --> core_testing\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_testing\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> core_base\n",
+    "    utilities_interactivity --> core_testing\n",
     "    utilities_layout --> builders_scales\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> core_testing\n",
-    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
+    "    utilities_sizing --> builders_scales\n",
+    "    utilities_sizing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_testing\n",
-    "    utilities_svg --> builders_scales\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_base\n",
+    "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_testing\n",
     "    utilities_tables --> builders_scales\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> core_testing\n",
-    "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> builders_scales\n",
+    "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> core_testing\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
+    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
-    "    utilities_typography --> core_base\n",
     "    utilities_typography --> core_testing\n",
     "```\n",
     "\n",
@@ -230,7 +230,7 @@
     "- Showing usage examples from test functions\n",
     "- Providing source code for helper functions\n",
     "- Searching across all library components\n",
-    "- Testing code snippets with automatic imports\n",
+    "- CRITICALLY: Testing code snippets with automatic imports BEFORE implementation\n",
     "- Generating recommended import statements\n",
     "- Scanning existing code for replaceable CSS patterns\n",
     "\n",
@@ -247,7 +247,8 @@
     "    helpers             Show helper functions\n",
     "    helper              Show source code for a specific helper\n",
     "    search              Search across all library components\n",
-    "    test-code           Test code snippets using the library\n",
+    "    test-code           ⚠️ CRITICAL: Test code snippets using the library\n",
+    "                        (ALWAYS use before implementation)\n",
     "    core-utils          List core utility functions\n",
     "    core-util           Show source code for a core utility\n",
     "    imports             Show recommended import statements\n",
@@ -260,7 +261,7 @@
     "  1. List all modules:     cjm-tailwind-explore modules\n",
     "  2. View factories:       cjm-tailwind-explore factories\n",
     "  3. Search for patterns:  cjm-tailwind-explore search <query>\n",
-    "  4. Test code:           cjm-tailwind-explore test-code \"<code>\"\n",
+    "  4. CRITICAL: Test code:  cjm-tailwind-explore test-code \"<code>\"\n",
     "  5. Get imports:         cjm-tailwind-explore imports\n",
     "  6. Scan existing code:  cjm-tailwind-explore scan <file>\n",
     "\n",
@@ -270,8 +271,13 @@
     "  - Use 'factory <module> <name>' for detailed factory information\n",
     "  - Use 'examples' to see test-based usage patterns\n",
     "  - Use 'search' to find specific functionality\n",
-    "  - Use 'test-code' to verify your understanding\n",
+    "  - CRITICAL: ALWAYS use 'test-code' to validate code BEFORE implementation\n",
     "  - Use 'scan' to analyze existing code for migration opportunities\n",
+    "\n",
+    "IMPORTANT: Code Validation\n",
+    "  ⚠️  ALWAYS use 'test-code' to verify generated code before using it\n",
+    "  ⚠️  This ensures correct syntax, proper imports, and expected output\n",
+    "  ⚠️  Never skip this step - it prevents errors and saves debugging time\n",
     "\n",
     "Key Concepts:\n",
     "  - Factories: Objects that generate CSS classes (e.g., forced_color_adjust, not_sr_only, sr_only)\n",
@@ -280,8 +286,8 @@
     "  - Helpers: Convenience functions for common patterns\n",
     "\n",
     "Tips for Coding Assistants:\n",
+    "  - MANDATORY: Use 'test-code' to validate ALL generated code before implementation\n",
     "  - Use 'search --include-source' to find usage patterns in code\n",
-    "  - Use 'test-code' to validate generated code before using it\n",
     "  - Use 'imports' to get all necessary import statements\n",
     "  - Use 'scan' to identify replaceable hardcoded CSS classes\n",
     "  - Factory names are intuitive: forced_color_adjust, not_sr_only, sr_only\n",
@@ -293,7 +299,7 @@
     "  cjm-tailwind-explore factories -m accessibility       # Explore accessibility utilities\n",
     "  cjm-tailwind-explore factory accessibility forced_color_adjust          # Learn about forced_color_adjust factory\n",
     "  cjm-tailwind-explore example accessibility fasthtml      # See usage examples\n",
-    "  cjm-tailwind-explore test-code 'print(str(forced_color_adjust.auto))'   # Test your understanding\n",
+    "  cjm-tailwind-explore test-code 'print(str(forced_color_adjust.auto))'   # CRITICAL: Test your understanding\n",
     "  cjm-tailwind-explore scan app.py                # Analyze existing code\n",
     "\n",
     "```\n",
@@ -1836,6 +1842,7 @@
     "    mask_repeat,\n",
     "    mask_size,\n",
     "    mask_type,\n",
+    "    test_effects_shadow_base_examples,\n",
     "    test_effects_shadow_size_examples,\n",
     "    test_effects_shadow_arbitrary_examples,\n",
     "    test_effects_shadow_color_examples,\n",
@@ -1880,6 +1887,11 @@
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_effects_shadow_base_examples()\n",
+    "    \"Test shadow size utilities.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def test_effects_shadow_size_examples()\n",
