Implement config-based approach for CLI tool.

--- a/nbs/cli/utils.ipynb
+++ b/nbs/cli/utils.ipynb
@@ -43,7 +43,8 @@
     "from typing import List, Tuple, Optional, Dict, Any, Callable, Union\n",
     "from dataclasses import dataclass\n",
     "import re\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config"
    ]
   },
   {
@@ -598,22 +599,7 @@
    "id": "6weugq0awtw",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_view_command(\n",
-    "    content_type: str,  # Type of content ('factory', 'example', 'helper', 'module')\n",
-    "    module_name: str,  # Module name\n",
-    "    item_name: str  # Item name (or feature name for examples)\n",
-    ") -> str:  # CLI command to view the item\n",
-    "    \"\"\"Get the CLI command to view a specific item.\"\"\"\n",
-    "    commands = {\n",
-    "        'factory': f\"cjm-tailwind-explore factory {module_name} {item_name}\",\n",
-    "        'example': f\"cjm-tailwind-explore example {module_name} {item_name}\",\n",
-    "        'helper': f\"cjm-tailwind-explore helper {module_name} {item_name}\",\n",
-    "        'module': f\"cjm-tailwind-explore factories --module {module_name}\"\n",
-    "    }\n",
-    "    return commands.get(content_type, \"\")"
-   ]
+   "source": "#| export\ndef get_view_command(\n    content_type: str,  # Type of content ('factory', 'example', 'helper', 'module')\n    module_name: str,  # Module name\n    item_name: str,  # Item name (or feature name for examples)\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> str:  # CLI command to view the item\n    \"\"\"Get the CLI command to view a specific item.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    cli_cmd = config.cli_command\n    \n    commands = {\n        'factory': f\"{cli_cmd} factory {module_name} {item_name}\",\n        'example': f\"{cli_cmd} example {module_name} {item_name}\",\n        'helper': f\"{cli_cmd} helper {module_name} {item_name}\",\n        'module': f\"{cli_cmd} factories --module {module_name}\"\n    }\n    return commands.get(content_type, \"\")"
   },
   {
    "cell_type": "code",
@@ -652,38 +638,7 @@
    "id": "djevbra8dit",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| export\n",
-    "import importlib\n",
-    "import pkgutil\n",
-    "\n",
-    "def discover_utility_modules(\n",
-    ") -> List[Tuple[str, Any]]:  # List of (module_name, module) tuples\n",
-    "    \"\"\"Discover all utility modules in the cjm_fasthtml_tailwind.utilities package.\"\"\"\n",
-    "    modules = []\n",
-    "    \n",
-    "    try:\n",
-    "        # Import the utilities package\n",
-    "        utilities_package = importlib.import_module('cjm_fasthtml_tailwind.utilities')\n",
-    "        \n",
-    "        # Get the package path\n",
-    "        if hasattr(utilities_package, '__path__'):\n",
-    "            # Iterate through all modules in the utilities package\n",
-    "            for importer, modname, ispkg in pkgutil.iter_modules(utilities_package.__path__, \n",
-    "                                                                 prefix='cjm_fasthtml_tailwind.utilities.'):\n",
-    "                if not ispkg:  # We only want modules, not sub-packages\n",
-    "                    try:\n",
-    "                        module = importlib.import_module(modname)\n",
-    "                        # Extract just the module name without the full path\n",
-    "                        short_name = modname.split('.')[-1]\n",
-    "                        modules.append((short_name, module))\n",
-    "                    except ImportError:\n",
-    "                        pass  # Skip modules that can't be imported\n",
-    "    except ImportError:\n",
-    "        pass  # Package not found\n",
-    "    \n",
-    "    return sorted(modules, key=lambda x: x[0])  # Sort by module name"
-   ]
+   "source": "#| export\nimport importlib\nimport pkgutil\n\ndef discover_utility_modules(\n    config: Optional[LibraryConfig] = None  # Optional configuration, uses active if not provided\n) -> List[Tuple[str, Any]]:  # List of (module_name, module) tuples\n    \"\"\"Discover all utility modules based on configuration.\"\"\"\n    if config is None:\n        config = get_active_config()\n    \n    modules = []\n    \n    # Iterate through all configured discovery paths\n    for discovery_path in config.module_discovery_paths:\n        package_path = f\"{config.package_name}.{discovery_path}\"\n        \n        try:\n            # Import the package\n            package = importlib.import_module(package_path)\n            \n            # Get the package path\n            if hasattr(package, '__path__'):\n                # Iterate through all modules in the package\n                for importer, modname, ispkg in pkgutil.iter_modules(package.__path__, \n                                                                     prefix=f'{package_path}.'):\n                    if not ispkg:  # We only want modules, not sub-packages\n                        try:\n                            module = importlib.import_module(modname)\n                            # Extract just the module name without the full path\n                            short_name = modname.split('.')[-1]\n                            modules.append((short_name, module))\n                        except ImportError:\n                            pass  # Skip modules that can't be imported\n        except ImportError:\n            pass  # Package not found\n    \n    return sorted(modules, key=lambda x: x[0])  # Sort by module name"
   },
   {
    "cell_type": "code",
@@ -691,25 +646,7 @@
    "id": "3ba35cd1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| export\n",
-    "def iterate_all_modules_with_items(\n",
-    "    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n",
-    "    module_filter: Optional[str] = None  # Optional specific module to filter for\n",
-    ") -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n",
-    "    \"\"\"Generic iterator for extracting items from all modules.\"\"\"\n",
-    "    all_items = {}\n",
-    "    \n",
-    "    for module_name, module in discover_utility_modules():\n",
-    "        if module_filter and module_name != module_filter:\n",
-    "            continue\n",
-    "            \n",
-    "        items = extractor_func(module, module_name)\n",
-    "        if items:  # Only include modules that have items\n",
-    "            all_items[module_name] = items\n",
-    "    \n",
-    "    return all_items"
-   ]
+   "source": "#| export\ndef iterate_all_modules_with_items(\n    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n    module_filter: Optional[str] = None,  # Optional specific module to filter for\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n    \"\"\"Generic iterator for extracting items from all modules.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    all_items = {}\n    \n    for module_name, module in discover_utility_modules(config):\n        if module_filter and module_name != module_filter:\n            continue\n            \n        items = extractor_func(module, module_name)\n        if items:  # Only include modules that have items\n            all_items[module_name] = items\n    \n    return all_items"
   },
   {
    "cell_type": "code",
@@ -835,20 +772,7 @@
    "id": "cb5233ef-9f06-4a16-9e7b-4e13f8c9f96e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| export\n",
-    "def list_utility_modules(\n",
-    ") -> Dict[str, str]:  # Dictionary mapping module names to their docstrings\n",
-    "    \"\"\"List all available utility modules with their docstrings.\"\"\"\n",
-    "    modules_info = {}\n",
-    "    \n",
-    "    for module_name, module in discover_utility_modules():\n",
-    "        # Get module docstring\n",
-    "        doc = inspect.getdoc(module) or \"No documentation available\"\n",
-    "        modules_info[module_name] = doc\n",
-    "    \n",
-    "    return modules_info"
-   ]
+   "source": "#| export\ndef list_utility_modules(\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> Dict[str, str]:  # Dictionary mapping module names to their docstrings\n    \"\"\"List all available utility modules with their docstrings.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    modules_info = {}\n    \n    for module_name, module in discover_utility_modules(config):\n        # Get module docstring\n        doc = inspect.getdoc(module) or \"No documentation available\"\n        modules_info[module_name] = doc\n    \n    return modules_info"
   },
   {
    "cell_type": "code",
