--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -31,7 +31,8 @@
     "├── builders/ (2)\n",
     "│   ├── colors.ipynb  # Color system builders for Tailwind CSS utilities\n",
     "│   └── scales.ipynb  # Numeric and named scale builders for Tailwind CSS utilities\n",
-    "├── cli/ (10)\n",
+    "├── cli/ (11)\n",
+    "│   ├── cli_config.ipynb            # Configuration system for multi-library CLI support\n",
     "│   ├── core_utils_discovery.ipynb  # Functions to discover and display core utility functions like combine_classes:\n",
     "│   ├── example_discovery.ipynb     # Functions to discover and extract test example functions:\n",
     "│   ├── explorer.ipynb              # CLI tool for API exploration of cjm-fasthtml-tailwind utilities\n",
@@ -64,7 +65,7 @@
     "    └── typography.ipynb                 # Typography utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 30 notebooks across 4 directories"
+    "Total: 31 notebooks across 4 directories"
    ]
   },
   {
@@ -77,6 +78,7 @@
     "graph LR\n",
     "    builders_colors[builders.colors<br/>colors]\n",
     "    builders_scales[builders.scales<br/>scales]\n",
+    "    cli_cli_config[cli.cli_config<br/>CLI Configuration]\n",
     "    cli_core_utils_discovery[cli.core_utils_discovery<br/>Core Utilities Discovery]\n",
     "    cli_example_discovery[cli.example_discovery<br/>Example Discovery]\n",
     "    cli_explorer[cli.explorer<br/>explorer]\n",
@@ -108,98 +110,102 @@
     "\n",
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
+    "    cli_core_utils_discovery --> cli_cli_config\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_search --> cli_helper_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> core_base\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_resources\n",
+    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_utils --> cli_cli_config\n",
     "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_effects\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_testing\n",
-    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_accessibility --> builders_scales\n",
+    "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_borders --> core_testing\n",
-    "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_scales\n",
-    "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> core_testing\n",
-    "    utilities_filters --> builders_scales\n",
+    "    utilities_effects --> core_base\n",
+    "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> builders_scales\n",
+    "    utilities_filters --> core_testing\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> core_testing\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> builders_colors\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_interactivity --> core_testing\n",
-    "    utilities_layout --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
+    "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> core_testing\n",
+    "    utilities_layout --> core_base\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
+    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_spacing --> core_testing\n",
+    "    utilities_svg --> core_testing\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_svg --> core_testing\n",
-    "    utilities_tables --> builders_scales\n",
-    "    utilities_tables --> core_base\n",
     "    utilities_tables --> core_testing\n",
-    "    utilities_transforms --> builders_scales\n",
-    "    utilities_transforms --> core_base\n",
+    "    utilities_tables --> core_base\n",
+    "    utilities_tables --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
-    "    utilities_transitions_and_animation --> core_base\n",
+    "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
+    "    utilities_transitions_and_animation --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
-    "    utilities_typography --> core_testing\n",
     "```\n",
     "\n",
-    "*91 cross-module dependencies detected*"
+    "*95 cross-module dependencies detected*"
    ]
   },
   {
@@ -1513,6 +1519,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### CLI Configuration (`cli_config.ipynb`)\n",
+    "> Configuration system for multi-library CLI support\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.cli.cli_config import (\n",
+    "    LibraryConfig,\n",
+    "    get_tailwind_config,\n",
+    "    get_daisyui_config,\n",
+    "    set_active_config,\n",
+    "    get_active_config,\n",
+    "    reset_config,\n",
+    "    get_config_by_name,\n",
+    "    list_available_configs,\n",
+    "    get_config_info\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def get_tailwind_config() -> LibraryConfig\n",
+    "    \"Get configuration for cjm-fasthtml-tailwind library.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_daisyui_config() -> LibraryConfig\n",
+    "    \"Get configuration for cjm-fasthtml-daisyui library.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def set_active_config(config: LibraryConfig) -> None:\n",
+    "    \"\"\"Set the active library configuration.\"\"\"\n",
+    "    global _active_config\n",
+    "    _active_config = config\n",
+    "\n",
+    "def get_active_config() -> LibraryConfig\n",
+    "    \"Set the active library configuration.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_active_config() -> LibraryConfig:\n",
+    "    \"\"\"Get the active library configuration.\n",
+    "    \n",
+    "    If no configuration is set, attempts to auto-detect based on:\n",
+    "    1. Environment variable FASTHTML_LIB_CONFIG\n",
+    "    2. Package availability\n",
+    "    3. Defaults to Tailwind config\n",
+    "    \"\"\"\n",
+    "    global _active_config\n",
+    "    \n",
+    "    if _active_config is not None\n",
+    "    \"\"\"\n",
+    "    Get the active library configuration.\n",
+    "    \n",
+    "    If no configuration is set, attempts to auto-detect based on:\n",
+    "    1. Environment variable FASTHTML_LIB_CONFIG\n",
+    "    2. Package availability\n",
+    "    3. Defaults to Tailwind config\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def reset_config() -> None\n",
+    "    \"Reset the active configuration to force re-detection.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_config_by_name(name: str) -> Optional[LibraryConfig]:\n",
+    "    \"\"\"Get a library configuration by name.\n",
+    "    \n",
+    "    Args:\n",
+    "        name: Library name ('tailwind', 'daisyui')\n",
+    "    \n",
+    "    Returns:\n",
+    "        LibraryConfig or None if not found\n",
+    "    \"\"\"\n",
+    "    configs = {\n",
+    "        'tailwind': get_tailwind_config,\n",
+    "    \"\"\"\n",
+    "    Get a library configuration by name.\n",
+    "    \n",
+    "    Args:\n",
+    "        name: Library name ('tailwind', 'daisyui')\n",
+    "    \n",
+    "    Returns:\n",
+    "        LibraryConfig or None if not found\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def list_available_configs() -> List[str]\n",
+    "    \"List all available library configurations.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_config_info(config: LibraryConfig) -> Dict[str, Any]:\n",
+    "    \"\"\"Get information about a configuration.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary with configuration details\n",
+    "    \"\"\"\n",
+    "    return {\n",
+    "        'library': config.display_name,\n",
+    "    \"\"\"\n",
+    "    Get information about a configuration.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary with configuration details\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
+    "class LibraryConfig:\n",
+    "    \"Configuration for a specific library's CLI tool.\"\n",
+    "    \n",
+    "    package_name: str  # e.g., 'cjm_fasthtml_tailwind' or 'cjm_fasthtml_daisyui'\n",
+    "    cli_command: str  # e.g., 'cjm-tailwind-explore' or 'cjm-daisyui-explore'\n",
+    "    display_name: str  # e.g., 'Tailwind' or 'DaisyUI'\n",
+    "    module_discovery_paths: List[str]  # e.g., ['utilities'] or ['components', 'builders']\n",
+    "    core_package: str  # e.g., 'cjm_fasthtml_tailwind.core'\n",
+    "    core_utilities: List[Tuple[str, str]]  # [(name, module_path), ...]\n",
+    "    base_imports: List[str] = field(...)  # Additional base imports\n",
+    "    css_class_prefix: Optional[str]  # e.g., 'daisy-' for DaisyUI classes\n",
+    "    test_pattern_prefix: str = 'test_'  # Prefix for test functions\n",
+    "    test_pattern_suffix: str = '_examples'  # Suffix for test functions\n",
+    "    helper_test_suffix: str = 'helper_examples'  # Suffix for helper test functions\n",
+    "    \n",
+    "    def get_utilities_package(self, module_name: str) -> str:\n",
+    "            \"\"\"Get the full package path for a utility module.\"\"\"\n",
+    "            # Find which discovery path contains this module\n",
+    "            for path in self.module_discovery_paths\n",
+    "        \"Get the full package path for a utility module.\"\n",
+    "    \n",
+    "    def get_test_function_pattern(self, module_name: str, feature: str) -> str:\n",
+    "            \"\"\"Get the expected test function name for a module and feature.\"\"\"\n",
+    "            return f\"{self.test_pattern_prefix}{module_name}_{feature}_{self.test_pattern_suffix}\"\n",
+    "        \n",
+    "        def get_helper_test_function(self, module_name: str) -> str\n",
+    "        \"Get the expected test function name for a module and feature.\"\n",
+    "    \n",
+    "    def get_helper_test_function(self, module_name: str) -> str\n",
+    "        \"Get the expected helper test function name for a module.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "_active_config: Optional[LibraryConfig] = None\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### colors (`colors.ipynb`)\n",
     "> Color system builders for Tailwind CSS utilities\n",
     "\n",
@@ -1748,6 +1914,7 @@
     "\n",
     "```python\n",
     "def get_core_utilities(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> List[CoreUtilityInfo]:  # TODO: Add return description\n",
     "    \"Get information about core utility functions.\"\n",
     "```\n",
@@ -3596,7 +3763,8 @@
     "\n",
     "```python\n",
     "def get_recommended_imports(\n",
-    "    modules: Optional[List[str]] = None  # Specific modules to include, or None for all\n",
+    "    modules: Optional[List[str]] = None,  # Specific modules to include, or None for all\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> List[str]:  # List of import statements\n",
     "    \"Get recommended import statements for using the library.\"\n",
     "```\n"
@@ -5573,7 +5741,8 @@
     "\n",
     "```python\n",
     "def create_test_script(\n",
-    "    code: str  # TODO: Add description\n",
+    "    code: str,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> str:  # TODO: Add return description\n",
     "    \"Create a test script with necessary imports and the provided code.\"\n",
     "```\n",
@@ -6887,7 +7056,8 @@
     "def get_view_command(\n",
     "    content_type: str,  # Type of content ('factory', 'example', 'helper', 'module')\n",
     "    module_name: str,  # Module name\n",
-    "    item_name: str  # Item name (or feature name for examples)\n",
+    "    item_name: str,  # Item name (or feature name for examples)\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> str:  # CLI command to view the item\n",
     "    \"Get the CLI command to view a specific item.\"\n",
     "```\n",
@@ -6904,14 +7074,16 @@
     "\n",
     "```python\n",
     "def discover_utility_modules(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration, uses active if not provided\n",
     ") -> List[Tuple[str, Any]]:  # List of (module_name, module) tuples\n",
-    "    \"Discover all utility modules in the cjm_fasthtml_tailwind.utilities package.\"\n",
+    "    \"Discover all utility modules based on configuration.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def iterate_all_modules_with_items(\n",
     "    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n",
-    "    module_filter: Optional[str] = None  # Optional specific module to filter for\n",
+    "    module_filter: Optional[str] = None,  # Optional specific module to filter for\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n",
     "    \"Generic iterator for extracting items from all modules.\"\n",
     "```\n",
@@ -6932,6 +7104,7 @@
     "\n",
     "```python\n",
     "def list_utility_modules(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> Dict[str, str]:  # Dictionary mapping module names to their docstrings\n",
     "    \"List all available utility modules with their docstrings.\"\n",
     "```\n",
