Implement config-based approach for CLI tool.

--- a/nbs/cli/cli_config.ipynb
+++ b/nbs/cli/cli_config.ipynb
@@ -150,23 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def get_daisyui_config() -> LibraryConfig:\n",
-    "    \"\"\"Get configuration for cjm-fasthtml-daisyui library.\"\"\"\n",
-    "    return LibraryConfig(\n",
-    "        package_name='cjm_fasthtml_daisyui',\n",
-    "        cli_command='cjm-daisyui-explore',\n",
-    "        display_name='DaisyUI',\n",
-    "        module_discovery_paths=['components', 'builders'],\n",
-    "        core_package='cjm_fasthtml_daisyui.core',\n",
-    "        core_utilities=[\n",
-    "            ('combine_classes', 'cjm_fasthtml_daisyui.core.utility_classes'),\n",
-    "            ('get_daisyui_headers', 'cjm_fasthtml_daisyui.core.resources'),\n",
-    "            ('DaisyThemes', 'cjm_fasthtml_daisyui.core.themes'),\n",
-    "        ],\n",
-    "        base_imports=['from fasthtml.common import *'],\n",
-    "        css_class_prefix='daisy-'\n",
-    "    )"
+    "# This cell removed - DaisyUI config moved to DaisyUI library"
    ]
   },
   {
@@ -198,10 +182,8 @@
     "def get_active_config() -> LibraryConfig:\n",
     "    \"\"\"Get the active library configuration.\n",
     "    \n",
-    "    If no configuration is set, attempts to auto-detect based on:\n",
-    "    1. Environment variable FASTHTML_LIB_CONFIG\n",
-    "    2. Package availability\n",
-    "    3. Defaults to Tailwind config\n",
+    "    If no configuration is set, returns the Tailwind config.\n",
+    "    Can be overridden by setting FASTHTML_LIB_CONFIG environment variable.\n",
     "    \"\"\"\n",
     "    global _active_config\n",
     "    \n",
@@ -210,22 +192,11 @@
     "    \n",
     "    # Try environment variable\n",
     "    env_config = os.environ.get('FASTHTML_LIB_CONFIG', '').lower()\n",
-    "    if env_config == 'daisyui':\n",
-    "        _active_config = get_daisyui_config()\n",
-    "    elif env_config == 'tailwind':\n",
+    "    if env_config == 'tailwind':\n",
     "        _active_config = get_tailwind_config()\n",
     "    else:\n",
-    "        # Try to detect based on package availability\n",
-    "        try:\n",
-    "            import cjm_fasthtml_daisyui\n",
-    "            _active_config = get_daisyui_config()\n",
-    "        except ImportError:\n",
-    "            try:\n",
-    "                import cjm_fasthtml_tailwind\n",
-    "                _active_config = get_tailwind_config()\n",
-    "            except ImportError:\n",
-    "                # Default to tailwind\n",
-    "                _active_config = get_tailwind_config()\n",
+    "        # Default to tailwind config for this library\n",
+    "        _active_config = get_tailwind_config()\n",
     "    \n",
     "    return _active_config"
    ]
@@ -266,14 +237,13 @@
     "    \"\"\"Get a library configuration by name.\n",
     "    \n",
     "    Args:\n",
-    "        name: Library name ('tailwind', 'daisyui')\n",
+    "        name: Library name ('tailwind')\n",
     "    \n",
     "    Returns:\n",
     "        LibraryConfig or None if not found\n",
     "    \"\"\"\n",
     "    configs = {\n",
     "        'tailwind': get_tailwind_config,\n",
-    "        'daisyui': get_daisyui_config,\n",
     "    }\n",
     "    \n",
     "    factory = configs.get(name.lower())\n",
@@ -300,7 +270,7 @@
     "#| export\n",
     "def list_available_configs() -> List[str]:\n",
     "    \"\"\"List all available library configurations.\"\"\"\n",
-    "    return ['tailwind', 'daisyui']"
+    "    return ['tailwind']"
    ]
   },
   {
