--- a/nbs/cli/core_utils_discovery.ipynb
+++ b/nbs/cli/core_utils_discovery.ipynb
@@ -36,7 +36,14 @@
    "id": "198263b4-a094-422b-a52a-c3c027110b2a",
    "metadata": {},
    "outputs": [],
-   "source": "#| export\nfrom dataclasses import dataclass\nimport importlib\nimport inspect\nfrom typing import Dict, List, Tuple, Any, Optional\nfrom cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config"
+   "source": [
+    "#| export\n",
+    "from dataclasses import dataclass\n",
+    "import importlib\n",
+    "import inspect\n",
+    "from typing import Dict, List, Tuple, Any, Optional\n",
+    "from cjm_fasthtml_tailwind.cli.cli_config import LibraryConfig, get_active_config"
+   ]
   },
   {
    "cell_type": "code",
@@ -64,7 +71,42 @@
    "id": "095b5972-4a8e-4ed9-90aa-35340b5a5224",
    "metadata": {},
    "outputs": [],
-   "source": "#| export\ndef get_core_utilities(\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> List[CoreUtilityInfo]:  # TODO: Add return description\n    \"\"\"Get information about core utility functions.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    utilities = []\n    \n    # Use core utilities from configuration\n    for util_name, module_path in config.core_utilities:\n        try:\n            module = importlib.import_module(module_path)\n            if hasattr(module, util_name):\n                func = getattr(module, util_name)\n                if callable(func):\n                    signature = str(inspect.signature(func)) if hasattr(inspect, 'signature') else \"\"\n                    docstring = inspect.getdoc(func) or \"No documentation available\"\n                    source = inspect.getsource(func) if hasattr(inspect, 'getsource') else \"\"\n                    \n                    utilities.append(CoreUtilityInfo(\n                        name=util_name,\n                        module=module_path,\n                        function=func,\n                        signature=signature,\n                        docstring=docstring,\n                        source=source,\n                        import_statement=f\"from {module_path} import {util_name}\"\n                    ))\n        except (ImportError, AttributeError, OSError):\n            pass\n    \n    return utilities"
+   "source": [
+    "#| export\n",
+    "def get_core_utilities(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
+    ") -> List[CoreUtilityInfo]:  # TODO: Add return description\n",
+    "    \"\"\"Get information about core utility functions.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "        \n",
+    "    utilities = []\n",
+    "    \n",
+    "    # Use core utilities from configuration\n",
+    "    for util_name, module_path in config.core_utilities:\n",
+    "        try:\n",
+    "            module = importlib.import_module(module_path)\n",
+    "            if hasattr(module, util_name):\n",
+    "                func = getattr(module, util_name)\n",
+    "                if callable(func):\n",
+    "                    signature = str(inspect.signature(func)) if hasattr(inspect, 'signature') else \"\"\n",
+    "                    docstring = inspect.getdoc(func) or \"No documentation available\"\n",
+    "                    source = inspect.getsource(func) if hasattr(inspect, 'getsource') else \"\"\n",
+    "                    \n",
+    "                    utilities.append(CoreUtilityInfo(\n",
+    "                        name=util_name,\n",
+    "                        module=module_path,\n",
+    "                        function=func,\n",
+    "                        signature=signature,\n",
+    "                        docstring=docstring,\n",
+    "                        source=source,\n",
+    "                        import_statement=f\"from {module_path} import {util_name}\"\n",
+    "                    ))\n",
+    "        except (ImportError, AttributeError, OSError):\n",
+    "            pass\n",
+    "    \n",
+    "    return utilities"
+   ]
   },
   {
    "cell_type": "code",
