--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -112,96 +112,96 @@
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_cli_config\n",
-    "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_accessibility\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_sizing\n",
     "    core_testing --> core_resources\n",
     "    core_testing --> utilities_typography\n",
-    "    core_testing --> core_base\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_accessibility\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
-    "    utilities_backgrounds --> core_testing\n",
+    "    utilities_accessibility --> core_testing\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
+    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> core_testing\n",
     "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> core_testing\n",
-    "    utilities_filters --> core_base\n",
+    "    utilities_effects --> core_testing\n",
     "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_testing\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_filters --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_interactivity --> core_testing\n",
-    "    utilities_interactivity --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> core_testing\n",
-    "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
+    "    utilities_layout --> core_base\n",
+    "    utilities_layout --> core_testing\n",
     "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
-    "    utilities_spacing --> core_testing\n",
-    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> core_testing\n",
+    "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> core_testing\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
-    "    utilities_tables --> core_base\n",
+    "    utilities_svg --> core_testing\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_transforms --> core_testing\n",
-    "    utilities_transforms --> core_base\n",
+    "    utilities_tables --> core_base\n",
+    "    utilities_tables --> core_testing\n",
     "    utilities_transforms --> builders_scales\n",
-    "    utilities_transitions_and_animation --> core_testing\n",
+    "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> core_testing\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
-    "    utilities_typography --> core_testing\n",
-    "    utilities_typography --> core_base\n",
+    "    utilities_transitions_and_animation --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_base\n",
+    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
@@ -1528,7 +1528,6 @@
     "from cjm_fasthtml_tailwind.cli.cli_config import (\n",
     "    LibraryConfig,\n",
     "    get_tailwind_config,\n",
-    "    get_daisyui_config,\n",
     "    set_active_config,\n",
     "    get_active_config,\n",
     "    reset_config,\n",
@@ -1546,11 +1545,6 @@
     "```\n",
     "\n",
     "```python\n",
-    "def get_daisyui_config() -> LibraryConfig\n",
-    "    \"Get configuration for cjm-fasthtml-daisyui library.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
     "def set_active_config(config: LibraryConfig) -> None:\n",
     "    \"\"\"Set the active library configuration.\"\"\"\n",
     "    global _active_config\n",
@@ -1564,10 +1558,8 @@
     "def get_active_config() -> LibraryConfig:\n",
     "    \"\"\"Get the active library configuration.\n",
     "    \n",
-    "    If no configuration is set, attempts to auto-detect based on:\n",
-    "    1. Environment variable FASTHTML_LIB_CONFIG\n",
-    "    2. Package availability\n",
-    "    3. Defaults to Tailwind config\n",
+    "    If no configuration is set, returns the Tailwind config.\n",
+    "    Can be overridden by setting FASTHTML_LIB_CONFIG environment variable.\n",
     "    \"\"\"\n",
     "    global _active_config\n",
     "    \n",
@@ -1575,10 +1567,8 @@
     "    \"\"\"\n",
     "    Get the active library configuration.\n",
     "    \n",
-    "    If no configuration is set, attempts to auto-detect based on:\n",
-    "    1. Environment variable FASTHTML_LIB_CONFIG\n",
-    "    2. Package availability\n",
-    "    3. Defaults to Tailwind config\n",
+    "    If no configuration is set, returns the Tailwind config.\n",
+    "    Can be overridden by setting FASTHTML_LIB_CONFIG environment variable.\n",
     "    \"\"\"\n",
     "```\n",
     "\n",
@@ -1592,7 +1582,7 @@
     "    \"\"\"Get a library configuration by name.\n",
     "    \n",
     "    Args:\n",
-    "        name: Library name ('tailwind', 'daisyui')\n",
+    "        name: Library name ('tailwind')\n",
     "    \n",
     "    Returns:\n",
     "        LibraryConfig or None if not found\n",
@@ -1603,7 +1593,7 @@
     "    Get a library configuration by name.\n",
     "    \n",
     "    Args:\n",
-    "        name: Library name ('tailwind', 'daisyui')\n",
+    "        name: Library name ('tailwind')\n",
     "    \n",
     "    Returns:\n",
     "        LibraryConfig or None if not found\n",
