--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -113,96 +113,96 @@
     "    cli_core_utils_discovery --> cli_cli_config\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_factory_extraction\n",
     "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_factory_extraction --> core_base\n",
+    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_cli_config\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_search --> cli_utils\n",
+    "    cli_imports --> cli_cli_config\n",
     "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_utils\n",
     "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_accessibility\n",
-    "    utilities_accessibility --> core_base\n",
+    "    core_testing --> core_base\n",
+    "    core_testing --> core_resources\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_testing\n",
-    "    utilities_backgrounds --> core_base\n",
+    "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
-    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> core_base\n",
+    "    utilities_borders --> core_testing\n",
+    "    utilities_borders --> core_base\n",
     "    utilities_effects --> builders_colors\n",
     "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> core_testing\n",
-    "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> core_base\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_testing\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> core_testing\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> core_testing\n",
+    "    utilities_interactivity --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> core_base\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> core_testing\n",
-    "    utilities_svg --> core_base\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_testing\n",
+    "    utilities_svg --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_tables --> core_base\n",
     "    utilities_tables --> core_testing\n",
+    "    utilities_tables --> core_base\n",
     "    utilities_transforms --> builders_scales\n",
-    "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> core_testing\n",
-    "    utilities_transitions_and_animation --> core_base\n",
+    "    utilities_transforms --> core_base\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> core_base\n",
-    "    utilities_typography --> core_testing\n",
+    "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> core_base\n",
     "```\n",
     "\n",
     "*95 cross-module dependencies detected*"
@@ -1629,14 +1629,14 @@
     "class LibraryConfig:\n",
     "    \"Configuration for a specific library's CLI tool.\"\n",
     "    \n",
-    "    package_name: str  # e.g., 'cjm_fasthtml_tailwind' or 'cjm_fasthtml_daisyui'\n",
-    "    cli_command: str  # e.g., 'cjm-tailwind-explore' or 'cjm-daisyui-explore'\n",
-    "    display_name: str  # e.g., 'Tailwind' or 'DaisyUI'\n",
+    "    package_name: str  # e.g., 'cjm_fasthtml_tailwind'\n",
+    "    cli_command: str  # e.g., 'cjm-tailwind-explore'\n",
+    "    display_name: str  # e.g., 'Tailwind'\n",
     "    module_discovery_paths: List[str]  # e.g., ['utilities'] or ['components', 'builders']\n",
     "    core_package: str  # e.g., 'cjm_fasthtml_tailwind.core'\n",
     "    core_utilities: List[Tuple[str, str]]  # [(name, module_path), ...]\n",
     "    base_imports: List[str] = field(...)  # Additional base imports\n",
-    "    css_class_prefix: Optional[str]  # e.g., 'daisy-' for DaisyUI classes\n",
+    "    css_class_prefix: Optional[str]\n",
     "    test_pattern_prefix: str = 'test_'  # Prefix for test functions\n",
     "    test_pattern_suffix: str = '_examples'  # Suffix for test functions\n",
     "    helper_test_suffix: str = 'helper_examples'  # Suffix for helper test functions\n",
