Update extract_test_examples_from_module function to support submodules.

--- a/nbs/cli/example_discovery.ipynb
+++ b/nbs/cli/example_discovery.ipynb
@@ -80,8 +80,15 @@
     "    \"\"\"Extract all test example functions from a module.\"\"\"\n",
     "    examples = []\n",
     "    \n",
-    "    # Pattern to match test functions: test_<module>_<feature>_examples\n",
-    "    pattern = re.compile(rf'^test_{module_name}_(\\w+)_examples$')\n",
+    "    if \".\" in module_name:\n",
+    "        # print(\"Submodule detected.\")\n",
+    "        submodule_name = module_name.split(\".\")[-1]\n",
+    "        # print(f\"Submodule: {submodule_name}\")\n",
+    "        # Pattern to match test functions: test_<submodule>_<feature>_examples\n",
+    "        pattern = re.compile(rf'^test_{submodule_name}_(\\w+)_examples$')\n",
+    "    else:    \n",
+    "        # Pattern to match test functions: test_<module>_<feature>_examples\n",
+    "        pattern = re.compile(rf'^test_{module_name}_(\\w+)_examples$')\n",
     "    \n",
     "    for name in dir(module):\n",
     "        match = pattern.match(name)\n",
