Update CLI utility functions to use config-based approach.

--- a/nbs/cli/utils.ipynb
+++ b/nbs/cli/utils.ipynb
@@ -116,12 +116,16 @@
     "def print_not_found(\n",
     "    item_type: str,  # TODO: Add description\n",
     "    item_name: str,  # TODO: Add description\n",
-    "    module_name: Optional[str] = None  # TODO: Add description\n",
+    "    module_name: Optional[str] = None,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Print a standardized not found message.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
     "    if module_name:\n",
     "        print(f\"No {item_type} '{item_name}' found in module '{module_name}' or module doesn't exist.\")\n",
-    "        print(f\"\\nTry running 'cjm-tailwind-explore modules' to see available modules.\")\n",
+    "        print(f\"\\nTry running '{config.cli_command} modules' to see available modules.\")\n",
     "    else:\n",
     "        print(f\"No {item_type} found in any utility modules.\")"
    ]
@@ -228,11 +232,14 @@
     "#| export\n",
     "def handle_module_not_found(\n",
     "    item_type: str,  # Type of items not found (e.g., 'factories', 'examples')\n",
-    "    module_name: str  # Name of the module that wasn't found\n",
+    "    module_name: str,  # Name of the module that wasn't found\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     "):\n",
     "    \"\"\"Print standardized error message for module not found.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
     "    print(f\"No {item_type} found in module '{module_name}' or module doesn't exist.\")\n",
-    "    print(\"\\nTry running 'cjm-tailwind-explore modules' to see available modules.\")"
+    "    print(f\"\\nTry running '{config.cli_command} modules' to see available modules.\")"
    ]
   },
   {
