Fix CLI auto-import functionality.

--- a/nbs/cli/imports.ipynb
+++ b/nbs/cli/imports.ipynb
@@ -72,7 +72,7 @@
     "    for module_name, module in discover_utility_modules(config):\n",
     "        if modules and module_name not in modules:\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "        # Get factories and helpers from this module\n",
     "        factories = extract_factories_from_module(module, module_name)\n",
     "        helpers = get_module_helpers(module_name)\n",
@@ -87,8 +87,7 @@
     "        if all_names:\n",
     "            import_list = \", \".join(sorted(all_names))\n",
     "            # Use the configuration to get the correct package path\n",
-    "            module_package = config.get_utilities_package(module_name)\n",
-    "            imports.append(f\"from {module_package} import {import_list}\")\n",
+    "            imports.append(f\"from {module.__name__} import {import_list}\")\n",
     "    \n",
     "    # Add core utilities\n",
     "    core_utils = get_core_utilities(config)\n",
