--- a/nbs/cli/test_code.ipynb
+++ b/nbs/cli/test_code.ipynb
@@ -81,8 +81,7 @@
     "            # Import only the actual factory names\n",
     "            factory_names = [f.name for f in factories]\n",
     "            import_list = \", \".join(factory_names)\n",
-    "            module_package = config.get_utilities_package(module_name)\n",
-    "            imports.append(f\"from {module_package} import {import_list}\")\n",
+    "            imports.append(f\"from {module.__name__} import {import_list}\")\n",
     "        \n",
     "        # Also check for helper functions and import them\n",
     "        helpers = get_module_helpers(module_name)\n",
@@ -98,8 +97,7 @@
     "            else:\n",
     "                # Just import helpers\n",
     "                import_list = \", \".join(helper_names)\n",
-    "                module_package = config.get_utilities_package(module_name)\n",
-    "                imports.append(f\"from {module_package} import {import_list}\")\n",
+    "                imports.append(f\"from {module.__name__} import {import_list}\")\n",
     "    \n",
     "    # Add core utilities from configuration\n",
     "    for util_name, module_path in config.core_utilities:\n",
