--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -113,109 +113,109 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_imports\n",
-    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_search\n",
-    "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_test_code\n",
-    "    cli_display --> cli_cli_config\n",
+    "    cli_display --> cli_utils\n",
     "    cli_display --> cli_factory_extraction\n",
+    "    cli_display --> cli_cli_config\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_pattern_scanner\n",
+    "    cli_display --> cli_example_discovery\n",
+    "    cli_display --> cli_imports\n",
+    "    cli_display --> cli_test_code\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_explorer --> cli_display\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_display\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_imports\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_cli_config\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_cli_config\n",
-    "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> core_base\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_accessibility\n",
-    "    utilities_accessibility --> builders_scales\n",
+    "    core_testing --> core_resources\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
+    "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_borders --> core_base\n",
     "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_scales\n",
-    "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_colors\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> core_testing\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_colors\n",
-    "    utilities_filters --> core_testing\n",
     "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_testing\n",
     "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_layout --> core_testing\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
     "    utilities_svg --> core_testing\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> core_testing\n",
     "    utilities_tables --> builders_scales\n",
     "    utilities_tables --> core_base\n",
+    "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> core_testing\n",
     "    utilities_transforms --> builders_scales\n",
-    "    utilities_transforms --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
-    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
@@ -238,7 +238,7 @@
     "cjm_fasthtml_tailwind CLI Explorer\n",
     "\n",
     "This tool helps you explore the cjm_fasthtml_tailwind library, which provides:\n",
-    "- Python-native Tailwind CSS 44 utility class builders for FastHTML projects\n",
+    "- Python-native Tailwind CSS v4 utility class builders for FastHTML projects\n",
     "- Type-safe, dynamic CSS class generation without hardcoded strings\n",
     "- Comprehensive utility factories (forced_color_adjust, not_sr_only, sr_only, etc.)\n",
     "- Helper functions for common patterns\n",
@@ -1654,12 +1654,6 @@
     "    test_pattern_prefix: str = 'test_'  # Prefix for test functions\n",
     "    test_pattern_suffix: str = '_examples'  # Suffix for test functions\n",
     "    helper_test_suffix: str = 'helper_examples'  # Suffix for helper test functions\n",
-    "    \n",
-    "    def get_utilities_package(self, module_name: str) -> str:\n",
-    "            \"\"\"Get the full package path for a utility module.\"\"\"\n",
-    "            # Find which discovery path contains this module\n",
-    "            for path in self.module_discovery_paths\n",
-    "        \"Get the full package path for a utility module.\"\n",
     "    \n",
     "    def get_test_function_pattern(self, module_name: str, feature: str) -> str:\n",
     "            \"\"\"Get the expected test function name for a module and feature.\"\"\"\n",
@@ -6950,7 +6944,8 @@
     "def print_not_found(\n",
     "    item_type: str,  # TODO: Add description\n",
     "    item_name: str,  # TODO: Add description\n",
-    "    module_name: Optional[str] = None  # TODO: Add description\n",
+    "    module_name: Optional[str] = None,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     "): # TODO: Add type hint\n",
     "    \"Print a standardized not found message.\"\n",
     "```\n",
