Fix CLI auto-import functionality.

--- a/nbs/cli/test_code.ipynb
+++ b/nbs/cli/test_code.ipynb
@@ -93,7 +93,7 @@
     "                all_names = factory_names + helper_names\n",
     "                import_list = \", \".join(all_names)\n",
     "                # Replace the last import for this module\n",
-    "                imports[-1] = f\"from {module_package} import {import_list}\"\n",
+    "                imports[-1] = f\"from {module.__name__} import {import_list}\"\n",
     "            else:\n",
     "                # Just import helpers\n",
     "                import_list = \", \".join(helper_names)\n",
